--- a/resources/interface/default.css
+++ b/resources/interface/default.css
@@ -9,6 +9,8 @@ dialog close { font-weight: bold; color: #d44; text-shadow: 2px 2px 2px black, -
 dialog close:hover { color: red }
 dialog close:hover:active { color: red; text-shadow: 2px 2px 2px #ccc, -1px -1px 2px black }
 
+form { background-color: rgba(white, 0.3); padding: 0.5em; border: 0.3em solid black }
+
 #header { background: linear-gradient(to right, rgba(#000,0.5), transparent 50%, rgba(#000,0.5)), url("dirt.png"); padding: 30px;
           background-size: 100% 100%, 64px 64px; border-bottom: 5px solid rgba(0,0,0,0.5) }
 
