fixe for piston and AO

--- a/doc/default.css
+++ b/doc/default.css
@@ -155,6 +155,7 @@ table.hspace td { min-width: 1.5em; text-align: center }
 .c  { color:#2222AA }
 .i  { color:#54AAAA }
 .d  { color:#A600F7 }
+v,
 .o  { color:#FF00FF }
 .s  { color:#7700FF }
 .t  { color:#146A31; font-weight:bold }
