--- a/resources/interface/default.css
+++ b/resources/interface/default.css
@@ -9,9 +9,10 @@ dialog close { font-weight: bold; color: #d44; text-shadow: 2px 2px 2px black, -
 dialog close:hover { color: red }
 dialog close:hover:active { color: red; text-shadow: 2px 2px 2px #ccc, -1px -1px 2px black }
 
-form.bg { padding: 0.5em; background-color: #c6c6c6; border: 0.2em outset #c6c6c6; color: #444;
+form.bg { padding: 0.5em; background-color: rgba(white, 0.5); border: 0.2em solid black;
 		  border-radius: 0.5em; box-shadow: 0 0 20px rgba(black, 0.5) }
-form.bg editbox { background-color: #8b8b8b; border: 0.15em inset #ccc; padding: 0.3em; -caret-color: #ddd; color: white; text-shadow: 2px 2px #3f3f3f }
+form.bg table { border: 2px solid black; background: rgba(black, 0.7); }
+form.bg table th { background: linear-gradient(to bottom, #87cb85, #6da46b); padding: 0.2em; border: 1px solid black }
 
 #header { background: linear-gradient(to right, rgba(#000,0.5), transparent 50%, rgba(#000,0.5)), url("dirt.png"); padding: 30px;
           background-size: 100% 100%, 64px 64px; border-bottom: 5px solid rgba(0,0,0,0.5) }
