--- a/resources/interface/default.css
+++ b/resources/interface/default.css
@@ -26,6 +26,7 @@ form.mc button:kbdfocus { outline: 0.15em solid selback 0.1em }
 form.mc #first { background: yellow; color: black; }
 form.mc #second { background: blue; color: white; }
 form.mc #nudge { background: green; color: white }
+form.mc button:disabled { background: gray!important; color: #444!important; text-shadow: 0.2em 0 #aaa }
 form.mc button.act { background: #555; color: yellow }
 form.mc #ko.act { color: #f88 }
 form.mc button:active  { background: rgba(black,0.2), white }
@@ -34,6 +35,9 @@ form.mc #first:active  { background: rgba(black,0.2), yellow }
 form.mc #second:active { background: rgba(black,0.2), blue }
 form.mc #nudge:active { background: rgba(black,0.2), green; color: #ddd }
 form.mc progress { background-color: rgba(black, 0.33); border-color: #555 }
+form.mc dim { color: #aaa }
+form.mc table td { padding: 0.3em 1.3em 0.3em 0.4em }
+form.mc table td:checked { color: selfore; background: selback }
 
 /* world selection */
 #header { background: linear-gradient(to right, rgba(#000,0.5), transparent 50%, rgba(#000,0.5)), url("dirt.png"); padding: 30px;
