--- a/resources/interface/default.css
+++ b/resources/interface/default.css
@@ -18,6 +18,9 @@ form.bg table th { padding: 0.2em; background-color: #c5c5c5; border: 2px outset
 form.bg table td { padding: 0.2em; text-shadow: 2px 2px #3f3f3f }
 form.bg table td:checked { background-color: #23ba1f; color: selfore }
 form.bg fieldset { border: 0; border-top: 0.3em groove #c5c5c5; border-radius: 0; text-align: center }
+form.bg editbox.save { background: #444; color: white; font-weight: bold }
+form.bg button.save { padding: 4px 10px 4px }
+form.bg button.save:active { padding: 6px 12px 6px }
 
 /* mcedit style dialog */
 form.mc { background: rgba(black, 0.5); font-size: 0.9em; padding: 0.5em; border-radius: 0.5em }
@@ -58,6 +61,14 @@ form.mc table td:checked { color: selfore; background: selback }
 
 #toolbar { background: rgba(black,0.7); padding: 10px; box-shadow: 0 0 10px black; font-size: 0.9em }
 
+#filesys { border-radius: 0.5em; padding: 0.2em 1em; box-shadow: 0 0 1em black inset; border: 0.2em inset #c5c5c5;
+           background: rgba(#000,0.2), url("dirt.png"); background-size: 100% 100%, 4em 4em; border-spacing: auto 0 }
+#filesys td { padding: 0.1em; border: 2px solid transparent; color: #ddd; text-shadow: 0.1em 0.1em black }
+#filesys dim { color: #aaa }
+#filesys #icon { background: #4045c4; border: 4px solid black }
+#filesys td:checked { color: selfore; background: selback; border-color: rgba(black, 0.3) }
+#filesys vscroll thumb { border: 0; background: #aaa }
+
 
 
 button { padding: 8px 20px 4px; border-radius: 4px; background: linear-gradient(to bottom, #87cb85, #6da46b); font-weight: bold;
@@ -71,8 +82,8 @@ button:active { background: linear-gradient(to bottom, #416240, #2a3f29); border
 
 button.left:active, button.center:active, button.right:active { color: #e0f7ff }
 
-button:disabled { background: linear-gradient(to bottom, rgba(#555,0.5), rgba(#444,0.5)); border: 0; color: #aaa;
-				  box-shadow: 0 0 4px black inset }
+button:disabled { background: linear-gradient(to bottom, rgba(#87cb85,0.75), rgba(#6da46b,0.75)); border: 0; padding: 10px 22px 6px; color: #777;
+				  box-shadow: 0 0 4px black inset; text-shadow: none; outline: 3px inset #444 }
 
 #edit { font-size: 1.5em; padding: 10px 20px 6px }
 #edit:active { box-shadow: 0 0 8px black inset; padding: 12px 22px 8px }
