--- a/resources/interface/default.css
+++ b/resources/interface/default.css
@@ -43,11 +43,11 @@ form.mc #first:active  { background: rgba(black,0.2), yellow }
 form.mc #second:active { background: rgba(black,0.2), blue }
 form.mc #nudge:active { background: rgba(black,0.2), green; color: #ddd }
 form.mc progress { background-color: rgba(black, 0.33); border-color: #555 }
-form.mc dim { color: #aaa }
 form.mc table td { padding: 0.3em 1.3em 0.3em 0.4em }
 form.mc table td:checked { color: selfore; background: selback }
 form.mc title { font-weight: bold; text-align: center }
 form.mc #icon { border: 2px solid #87cb85 }
+dim { color: #aaa }
 
 /* world selection */
 #header { background: linear-gradient(to right, rgba(#000,0.5), transparent 50%, rgba(#000,0.5)), url("dirt.png"); padding: 30px;
@@ -71,7 +71,6 @@ form.mc #icon { border: 2px solid #87cb85 }
 #filesys { border-radius: 0.5em; padding: 0.2em 1em; box-shadow: 0 0 1em black inset; border: 0.2em inset #c5c5c5;
            background: rgba(#000,0.2), url("dirt.png"); background-size: 100% 100%, 4em 4em; border-spacing: auto 0 }
 #filesys td { padding: 0.1em; border: 2px solid transparent; color: #ddd; text-shadow: 0.1em 0.1em black }
-#filesys dim { color: #aaa }
 #filesys #icon { background: #4045c4; border: 4px solid black }
 #filesys td:checked { color: selfore; background: selback; border-color: rgba(black, 0.3) }
 #filesys vscroll thumb { border: 0; background: #aaa }
