--- a/resources/interface/default.css
+++ b/resources/interface/default.css
@@ -32,7 +32,7 @@ form.mc { background: rgba(black, 0.65); font-size: 0.9em; padding: 0.5em; borde
 form.mc button { padding: 0.2em 0.5em; box-shadow: none; border: 0; outline: 0; text-transform: none; text-shadow: none; background: white; color: black }
 form.mc button:kbdfocus { outline: 0.15em solid selback 0.1em }
 form.mc #first { background: yellow; color: black; }
-form.mc #second { background: blue; color: white; }
+form.mc #second { background: #33f; color: white; }
 form.mc #nudge { background: green; color: white }
 form.mc button:disabled { background: gray!important; color: #444!important; text-shadow: 0.2em 0 #aaa }
 form.mc button.act { background: #555; color: yellow }
@@ -40,7 +40,7 @@ form.mc #ko.act { color: #f88 }
 form.mc button:active  { background: rgba(black,0.2), white }
 form.mc button.act:active { color: black }
 form.mc #first:active  { background: rgba(black,0.2), yellow }
-form.mc #second:active { background: rgba(black,0.2), blue }
+form.mc #second:active { background: rgba(black,0.2), #33f }
 form.mc #nudge:active { background: rgba(black,0.2), green; color: #ddd }
 form.mc progress { background-color: rgba(black, 0.33); border-color: #555 }
 form.mc table td { padding: 0.3em 1.3em 0.3em 0.4em }
