--- a/resources/interface/default.css
+++ b/resources/interface/default.css
@@ -48,6 +48,7 @@ form.mc table td:checked { color: selfore; background: selback }
 form.mc title { font-weight: bold; text-align: center }
 form.mc #icon { border: 2px solid #87cb85 }
 dim { color: #aaa }
+#error { color: red }
 
 /* world selection */
 #header { background: linear-gradient(to right, rgba(#000,0.5), transparent 50%, rgba(#000,0.5)), url("dirt.png"); padding: 30px;
