--- a/resources/interface/default.css
+++ b/resources/interface/default.css
@@ -48,6 +48,7 @@ form.mc table td:checked { color: selfore; background: selback }
 form.mc title { font-weight: bold; text-align: center }
 form.mc #icon { border: 2px solid #87cb85 }
 dim { color: #aaa }
+note { background: yellow; color: black }
 #error { color: red }
 
 /* world selection */
